# apps.core.preloaded.ug-setting-gallery-efl

./: CMakeLists.txt  NOTICE  project.config
debian/: changelog  control  libug-setting-gallery-efl.install.in  libug-setting-gallery-efl.postinst  rules
include/: sg-debug.h  sg-keys.h  ug-setting-gallery.h
packaging/: changelog  ug-setting-gallery-efl.spec
po/: CMakeLists.txt  POTFILES.in  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de_DE.po  el_GR.po  en.po  en_US.po  es_ES.po  es_MX.po  et.po  eu.po  fi.po  fr_CA.po  fr_FR.po  ga.po  gl.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  ko_KR.po  lt.po  lv.po  mk.po  ms.po  nb.po  nl_NL.po  no.po  (+20 more)
src/: sg-keys.c  ug-setting-gallery.c
