CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(ug-setting-gallery-efl C)

#SET(PREFIX ${CMAKE_INSTALL_PREFIX})
#SET(EXEC_PREFIX "\${prefix}")
#SET(LIBDIR "\${prefix}/lib")
#SET(INCLUDEDIR "\${prefix}/include")
#SET(VERSION 0.1.0)

IF("${ARCH}" STREQUAL "arm")
	ADD_DEFINITIONS("-DTARGET")
ENDIF("${ARCH}" STREQUAL "arm")

SET(SRCS
	src/ug-setting-gallery.c
	src/sg-keys.c
)

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}/include
)

INCLUDE(FindPkgConfig)
pkg_check_modules(pkgs REQUIRED elementary ui-gadget-1 dlog vconf)

FOREACH(flag ${pkgs_CFLAGS})
	SET(EXTRA_CXXFLAGS "${EXTRA_CXXFLAGS} ${flag}")
ENDFOREACH(flag)

SET(EXTRA_CXXFLAGS "${EXTRA_CXXFLAGS} -fvisibility=hidden -Wall")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${EXTRA_CXXFLAGS}")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CXXFLAGS}")

ADD_DEFINITIONS("-DPREFIX=\"${CMAKE_INSTALL_PREFIX}\"")

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRCS})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES SOVERSION 0.1.0)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${pkgs_LDFLAGS})


#SET(MS_KEY_INIT ms_key_init)
#SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS} -g")
#SET(CMAKE_C_FLAGS_DEBUG "-O2 -g")

#SET(CMAKE_EXE_LINKER_FLAGS "-Wl,--as-needed -Wl,--rpath=/usr/lib")

#ADD_EXECUTABLE(${MS_KEY_INIT}
#        src/ms-key-init.c
#)
#TARGET_LINK_LIBRARIES(${MS_KEY_INIT} ${PROJECT_NAME})

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION /usr/ug/lib)
#INSTALL(TARGETS ${MS_KEY_INIT} DESTINATION bin)

INSTALL(FILES LICENSE DESTINATION /usr/share/license RENAME ${PROJECT_NAME})

ADD_SUBDIRECTORY(po)

